--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Eyesone"
         tools:targetApi="31">
+        <meta-data
+            android:name="com.goodle.android.geo.API_KEY"
+            android:value="AIzaSyCRmidlm35d9b3axL3gnJpCgIu38XYSHug"/>
+
         <activity
             android:name=".NeviActivity2"
             android:exported="false">
@@ -22,22 +26,6 @@
         <activity
             android:name=".TextActivity"
             android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".ReviseBookmarkActivity"
-            android:exported="false"
-            android:label="Revise Bookmark">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".AddBookmarkActivity"
-            android:exported="false"
-            android:label="Add Bookmark">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
