--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     implementation('com.google.android.gms:play-services-maps:18.2.0')
     implementation('com.google.android.gms:play-services-location:21.2.0')
+
+    implementation 'com.google.maps.android:android-maps-utils:2.3.0'
+
+
 }
