--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 
 android {
     namespace 'kr.ac.duksung.eyesone'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "kr.ac.duksung.eyesone"
@@ -39,6 +39,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'androidx.activity:activity:1.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
