--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,14 +22,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Eyesone"
         tools:targetApi="31">
-        <activity
-            android:name=".CaptureActivity"
-            android:exported="false" />
 
         <meta-data
             android:name="com.goodle.android.geo.API_KEY"
             android:value="AIzaSyCRmidlm35d9b3axL3gnJpCgIu38XYSHug" />
-
 
         <activity
             android:name=".NeviActivity"
@@ -42,6 +38,21 @@
                 <action android:name="android.intent.action.TTS_SERVICE" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".CaptureActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+
+            <intent-filter>
+                <action android:name="android.intent.action.TTS_SERVICE" />
+            </intent-filter>
+        </activity>
+
+
+
         <activity
             android:name=".TextActivity"
             android:exported="false">
