--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,9 @@
         android:theme="@style/Theme.Eyesone"
         tools:targetApi="31">
         <activity
+            android:name=".NeviStartActivity"
+            android:exported="false" />
+        <activity
             android:name=".NeviActivity2"
             android:exported="false" />
 
