--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,5 +52,7 @@ dependencies {
 
     implementation 'com.google.maps.android:android-maps-utils:2.3.0'
 
+    implementation 'com.google.maps:google-maps-services:0.9.3'
+
 
 }
