--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,5 +54,7 @@ dependencies {
 
     implementation 'com.google.maps:google-maps-services:0.9.3'
 
+    implementation 'org.tensorflow:tensorflow-lite:2.4.0'
+    implementation 'org.tensorflow:tensorflow-lite-gpu:2.4.0'
 
 }
